@@ -1,12 +1,12 @@
 package uk.gov.hmcts.reform.finrem.caseorchestration.handler;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.hmcts.reform.ccd.client.model.CallbackRequest;
 import uk.gov.hmcts.reform.finrem.caseorchestration.ccd.callback.CallbackType;
 import uk.gov.hmcts.reform.finrem.caseorchestration.controllers.GenericAboutToStartOrSubmitCallbackResponse;
@@ -20,69 +20,44 @@ import java.io.InputStream;
 import java.util.List;
 import java.util.Map;
 
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.is;
-import static org.junit.Assert.assertEquals;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.verify;
+import static uk.gov.hmcts.reform.finrem.caseorchestration.TestConstants.AUTH_TOKEN;
+import static uk.gov.hmcts.reform.finrem.caseorchestration.test.Assertions.assertCanHandle;
 
-@RunWith(MockitoJUnitRunner.class)
-public class HearingConsentAboutToSubmitHandlerTest {
+@ExtendWith(MockitoExtension.class)
+class HearingConsentAboutToSubmitHandlerTest {
+
+    private static final String TEST_JSON = "/fixtures/consented.listOfHearing/list-for-hearing.json";
 
     @InjectMocks
     private HearingConsentAboutToSubmitHandler handler;
     @Mock
-    private ConsentHearingService service;
-
+    private ConsentHearingService consentHearingService;
     private ConsentedHearingHelper helper;
-
     private final ObjectMapper objectMapper = new ObjectMapper();
-    private static final String AUTH_TOKEN = "tokien:)";
-    private static final String TEST_JSON = "/fixtures/consented.listOfHearing/list-for-hearing.json";
 
-    @Before
+    @BeforeEach
     public void setup() {
         helper = new ConsentedHearingHelper(objectMapper);
     }
 
     @Test
-    public void givenConsentedCase_whenRequestedListForHearing_thenHandlerCanHandle() {
-        assertThat(handler
-                .canHandle(CallbackType.ABOUT_TO_SUBMIT, CaseType.CONSENTED, EventType.LIST_FOR_HEARING_CONSENTED),
-            is(true));
+    void testCanHandle() {
+        assertCanHandle(handler, CallbackType.ABOUT_TO_SUBMIT, CaseType.CONSENTED, EventType.LIST_FOR_HEARING_CONSENTED);
     }
 
     @Test
-    public void givenConsentedCase_whenWrongEventType_thenHandlerCanNotHandle() {
-        assertThat(handler
-                .canHandle(CallbackType.ABOUT_TO_SUBMIT, CaseType.CONSENTED, EventType.INTERIM_HEARING),
-            is(false));
-    }
-
-    @Test
-    public void givenConsentedCase_whenWrongCallbackType_thenHandlerCanNotHandle() {
-        assertThat(handler
-                .canHandle(CallbackType.ABOUT_TO_START, CaseType.CONSENTED, EventType.LIST_FOR_HEARING_CONSENTED),
-            is(false));
-    }
-
-    @Test
-    public void givenConsentedCase_whenWrongCaseType_thenHandlerCanNotHandle() {
-        assertThat(handler
-                .canHandle(CallbackType.ABOUT_TO_SUBMIT, CaseType.CONTESTED, EventType.LIST_FOR_HEARING_CONSENTED),
-            is(false));
-    }
-
-    @Test
-    public void givenContestedCase_WhenMultipleInterimHearing_ThenHearingsShouldBePresentInChronologicalOrder() {
+    void givenContestedCase_WhenMultipleInterimHearing_ThenHearingsShouldBePresentInChronologicalOrder() {
         CallbackRequest callbackRequest = buildCallbackRequest();
         GenericAboutToStartOrSubmitCallbackResponse<Map<String, Object>> handle =
             handler.handle(callbackRequest, AUTH_TOKEN);
 
         Map<String, Object> caseData = handle.getData();
         List<ConsentedHearingDataWrapper> hearings = helper.getHearings(caseData);
-        assertEquals("2012-05-19", hearings.get(0).getValue().hearingDate);
-        verify(service).submitHearing(any(), any(), any());
+        assertThat(hearings.getFirst().getValue().hearingDate).isEqualTo("2012-05-19");
+        verify(consentHearingService).submitHearing(any(), any(), any());
     }
 
     private CallbackRequest buildCallbackRequest() {
